--- a/index.html
+++ b/index.html
@@ -89,7 +89,13 @@
     #modal { display: none; position: fixed; top: 50%; left: 50%; transform: translate(-50%, -50%); background: #333; padding: 1.0em 1.0em 1.2em; border-radius: 0.8em; width: 88%; max-width: 420px; z-index: 100; border: 1px solid var(--border); box-shadow: 0 4px 12px rgba(0,0,0,0.4); }
     #modal h3 { margin: 0 0 0.7em; font-size: 1.2em; }
     #modal textarea { width: 100%; height: 110px; background: #444; color: #fff; border: 1px solid #666; border-radius: 0.5em; padding: 0.6em; font-size: 0.98em; resize: none; }
-    #modal .modal-buttons { display: flex; flex-direction: column; gap: 0.6em; margin-top: 0.8em; align-items: stretch; }
+    #modal .modal-buttons { display: flex; flex-direction: column; gap: 0.8em; margin-top: 0.8em; }
+#modal .primary-full { width: 100%; }
+#modal .bottom-row { display: flex; gap: 0.6em; }
+#modal .bottom-row > button { flex: 1; }
+/* dezenter Stil für "Ohne Text senden" */
+.subtle-btn { background: #2a2a2a; color: #dddddd; border: 1px solid #444; }
+.subtle-btn:hover { background: #353535; color: #ffffff; }
     #modal .main-row { display: flex; gap: 0.5em; width: 100%; justify-content: center; }
     #modal .main-row button { flex: 1; max-width: none; }
 
@@ -193,10 +199,15 @@
     <h3 id="modal-title"></h3>
     <textarea id="extra-text" placeholder="Zusätzliche Beschreibung…"></textarea>
     <div class="modal-buttons">
-      <div class="main-row">
-        <button id="btn-with-text" class="feedback-btn" onclick="sendWithText(this)">📨 Senden mit Text</button>
+      <!-- Senden mit Text: nimmt die komplette Breite ein -->
+      <button id="btn-with-text" class="feedback-btn primary-full" onclick="sendWithText(this)">📨 Senden mit Text</button>
+      <!-- Unten: Ohne Text + Abbrechen teilen sich die Zeile -->
+      <div class="bottom-row">
+        <button id="no-text-btn" class="subtle-btn" onclick="sendWithoutText(this)">📨 Ohne Text senden</button>
         <button class="feedback-btn" style="background:#666;" onclick="closeModal()">Abbrechen</button>
       </div>
+    </div>
+  </div>
       <button id="no-text-btn" class="feedback-btn" onclick="sendWithoutText(this)">📨 Ohne Text senden</button>
     </div>
   </div>
