--- a/index.html
+++ b/index.html
@@ -327,70 +327,76 @@ async function getStatusSafe() {
   const res = await fetchWithTimeout(`${API_BASE}/status`);
   return res.json();
 }
-function speedKey(s) {
-  if (!s) return '0|0|0';
-  const p = Number(s.ping||0), d = Number(s.download||0), u = Number(s.upload||0);
-  return `${Math.round(p)}|${Math.round(d)}|${Math.round(u)}`;
-}
-function isValidSpeed(s) {
-  if (!s) return false;
-  const p = Number(s.ping||0), d = Number(s.download||0), u = Number(s.upload||0);
-  return p > 0 && d > 0 && u > 0; // ggf. Schwellen anpassen
+function getSpeedTimestamp(data) {
+  return data?.vpn?.last_speedtest?.timestamp || null;
 }
 
-// STRIKT: Erfolg nur bei neuem, validem Messwert
 async function runSpeedtest() {
   const btn = document.getElementById('speedtest-btn');
   setBtnState(btn, '⏳ Läuft…', true);
-  btn.classList.remove('success','error'); btn.classList.add('loading');
+  btn.classList.remove('success','error');
+  btn.classList.add('loading');
 
-  // vorherigen Messwert merken
-  let prevKey = '0|0|0';
+  // Vorherigen Timestamp merken (robuster als gerundete Zahlen)
+  let prevTs = null;
   try {
     const before = await getStatusSafe();
-    prevKey = speedKey(before?.vpn?.last_speedtest);
+    prevTs = getSpeedTimestamp(before);
   } catch {}
 
   try {
     const res = await fetchWithTimeout(`${API_BASE}/speedtest/run`, {
       method: 'POST',
-      headers: { 'X-Token': SPEEDTEST_TOKEN }
+      headers: { 'X-Token': SPEEDTEST_TOKEN, 'Accept': 'application/json' }
     });
 
-    if (!res.ok && res.status !== 202) {
+    // Versuch JSON zu lesen (falls vorhanden)
+    let data = null;
+    try {
+      const ct = res.headers.get('content-type') || '';
+      if (ct.includes('application/json')) data = await res.json();
+    } catch { /* egal */ }
+
+    // 1) Expliziter Erfolg der API → sofort Erfolg anzeigen
+    if (data && data.success === true) {
+      btn.classList.remove('loading'); btn.classList.add('success');
+      setBtnState(btn, '✅ Erfolgreich! Danke!', true);
+
+      // Status direkt + leicht verzögert nachziehen (Log erscheint evtl. später)
+      loadStatus();
+      setTimeout(loadStatus, 3000);
+    }
+    // 2) Alternativ: 202/2xx ohne Body → „gestartet“, dann auf Timestamp warten
+    else if (res.ok || res.status === 202) {
+      btn.classList.remove('loading'); btn.classList.add('success');
+      setBtnState(btn, '✅ Gestartet…', true);
+
+      // Warte bis der Timestamp sich ändert (max. 30s)
+      const t0 = Date.now(), timeoutMs = 30000, pollMs = 1500;
+      let seenUpdate = false;
+      while (Date.now() - t0 < timeoutMs) {
+        await new Promise(r => setTimeout(r, pollMs));
+        try {
+          const now = await getStatusSafe();
+          const currTs = getSpeedTimestamp(now);
+          if (currTs && currTs !== prevTs) {
+            setBtnState(btn, '✅ Erfolgreich! Danke!', true);
+            loadStatus();
+            seenUpdate = true;
+            break;
+          }
+        } catch {}
+      }
+      if (!seenUpdate) {
+        // kein neues Log sichtbar – aber Start war ok → freundlich bleiben
+        setBtnState(btn, '✅ Gestartet (wird protokolliert)…', true);
+        setTimeout(loadStatus, 3000);
+      }
+    }
+    // 3) Alles andere → Fehler
+    else {
       throw new Error(`HTTP ${res.status}`);
     }
-
-    // Nur „gestartet“ anzeigen – noch kein Erfolg
-    btn.classList.remove('loading');
-    setBtnState(btn, '✅ Gestartet…', true);
-    btn.classList.add('success');
-
-    // auf neues, valides Ergebnis warten (z. B. 25s)
-    const t0 = Date.now(), timeoutMs = 25000, poll = 1500;
-    let updated = false;
-    while (Date.now() - t0 < timeoutMs) {
-      await new Promise(r => setTimeout(r, poll));
-      try {
-        const data = await getStatusSafe();
-        const curr = data?.vpn?.last_speedtest;
-        const currKey = speedKey(curr);
-        if (currKey !== prevKey && isValidSpeed(curr)) {
-          // jetzt ist es wirklich erfolgreich
-          setBtnState(btn, '✅ Erfolgreich! Danke!', true);
-          await loadStatus();
-          updated = true;
-          break;
-        }
-      } catch {}
-    }
-
-    if (!updated) {
-      // kein neues Ergebnis gesehen → als Fehler werten
-      btn.classList.remove('success'); btn.classList.add('error');
-      setBtnState(btn, '❌ Fehlgeschlagen (kein Ergebnis)', true);
-    }
-
   } catch (e) {
     console.error('Speedtest Fehler:', e);
     btn.classList.remove('loading'); btn.classList.add('error');
