--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
   <h1>Feedback zu Fritflix</h1>
 
   <!-- Immer sichtbarer Banner -->
-  <div id="switch-banner" class="switching"><span class="icon">❗</span><span id="switch-text">SERVERWECHSEL – Verbindung wird umgeschaltet…</span></div>
+  <div id="switch-banner"><span class="icon">❗</span><span id="switch-text">SERVERWECHSEL – Verbindung wird umgeschaltet…</span></div>
 
   <!-- Ausklappbarer Status -->
   <details id="status-details">
@@ -206,9 +206,6 @@
         <button id="no-text-btn" class="subtle-btn" onclick="sendWithoutText(this)">📨 Ohne Text senden</button>
         <button class="feedback-btn" style="background:#666;" onclick="closeModal()">Abbrechen</button>
       </div>
-    </div>
-  </div>
-      <button id="no-text-btn" class="feedback-btn" onclick="sendWithoutText(this)">📨 Ohne Text senden</button>
     </div>
   </div>
 
