--- a/index.html
+++ b/index.html
@@ -219,6 +219,7 @@
     const FETCH_TIMEOUT_MS_SPEEDTEST = 120000;  // /speedtest/run (2 min Puffer)
     const SPEEDTEST_POLL_TIMEOUT_MS  = 90000;    // max. 90s auf neues Ergebnis warten
     const SPEEDTEST_POLL_INTERVAL_MS = 2000;     // alle 2s nachsehen
+    const FETCH_TIMEOUT_MS_STATUS = 10000;
 
     let currentMsg = '', requireText = false;
     let lastSuccessTs = null;     // Zeitpunkt des letzten erfolgreichen Status
